crates/es-fluent-derive/src/macros/derive_es_fluent_variants/snapshots/es_fluent_derive__macros__derive_es_fluent_variants__tests__process_variants_prefers_parent_namespace_over_variants_and_label_namespaces.snap
---
source: crates/es-fluent-derive/src/macros/derive_es_fluent_variants/mod.rs
expression: tokens
---
///Variants of [`NamespaceHolder`].
pub enum NamespaceHolderVariants {
    ///The `field` variant of [`NamespaceHolder`].
    Field,
}
impl ::es_fluent::FluentMessage for NamespaceHolderVariants {
    fn to_fluent_string_with(
        &self,
        localize: &mut dyn for<'__es_fluent_message> FnMut(
            &str,
            &str,
            Option<
                &::std::collections::HashMap<
                    &str,
                    ::es_fluent::FluentValue<'__es_fluent_message>,
                >,
            >,
        ) -> String,
    ) -> String {
        match self {
            Self::Field => {
                localize(env!("CARGO_PKG_NAME"), "namespace_holder_variants-field", None)
            }
        }
    }
}
#[doc(hidden)]
#[allow(non_snake_case)]
mod __es_fluent_inventory_NamespaceHolderVariants {
    use super::*;
    static VARIANTS: &[::es_fluent::registry::FtlVariant] = &[
        ::es_fluent::registry::FtlVariant {
            name: "Field",
            ftl_key: "namespace_holder_variants-field",
            args: &[],
            module_path: module_path!(),
            line: line!(),
        },
    ];
    static TYPE_INFO: ::es_fluent::registry::FtlTypeInfo = ::es_fluent::registry::FtlTypeInfo {
        type_kind: ::es_fluent::meta::TypeKind::Enum,
        type_name: "NamespaceHolderVariants",
        variants: VARIANTS,
        file_path: file!(),
        module_path: module_path!(),
        namespace: Some(
            ::es_fluent::registry::NamespaceRule::Literal(
                ::std::borrow::Cow::Borrowed("parent_ns"),
            ),
        ),
    };
    ::es_fluent::__inventory::submit!(
        ::es_fluent::registry::RegisteredFtlType(& TYPE_INFO)
    );
}
impl ::es_fluent::FluentLabel for NamespaceHolderVariants {
    fn localize_label<__EsFluentLocalizer: ::es_fluent::FluentLocalizer + ?Sized>(
        localizer: &__EsFluentLocalizer,
    ) -> String {
        ::es_fluent::__private::localize_label(
            localizer,
            env!("CARGO_PKG_NAME"),
            "namespace_holder_variants_label",
        )
    }
}
#[doc(hidden)]
#[allow(non_snake_case)]
mod __es_fluent_label_inventory_NamespaceHolderVariants {
    use super::*;
    static VARIANTS: &[::es_fluent::registry::FtlVariant] = &[
        ::es_fluent::registry::FtlVariant {
            name: "NamespaceHolderVariants",
            ftl_key: "namespace_holder_variants_label",
            args: &[],
            module_path: module_path!(),
            line: line!(),
        },
    ];
    static TYPE_INFO: ::es_fluent::registry::FtlTypeInfo = ::es_fluent::registry::FtlTypeInfo {
        type_kind: ::es_fluent::meta::TypeKind::Enum,
        type_name: "NamespaceHolderVariants",
        variants: VARIANTS,
        file_path: file!(),
        module_path: module_path!(),
        namespace: Some(
            ::es_fluent::registry::NamespaceRule::Literal(
                ::std::borrow::Cow::Borrowed("parent_ns"),
            ),
        ),
    };
    ::es_fluent::__inventory::submit!(
        ::es_fluent::registry::RegisteredFtlType(& TYPE_INFO)
    );
}
