crates/es-fluent-derive/src/macros/derive_es_fluent_variants/snapshots/es_fluent_derive__macros__derive_es_fluent_variants__tests__process_variants_prefers_parent_namespace_over_variants_and_this_namespaces.snap
---
source: crates/es-fluent-derive/src/macros/derive_es_fluent_variants/mod.rs
assertion_line: 255
expression: tokens
---
///Variants of [`NamespaceHolder`].
pub enum NamespaceHolderVariants {
    ///The `field` variant of [`NamespaceHolder`].
    Field,
}
impl ::es_fluent::FluentDisplay for NamespaceHolderVariants {
    fn fluent_fmt(&self, f: &mut ::std::fmt::Formatter<'_>) -> ::std::fmt::Result {
        match self {
            Self::Field => {
                write!(
                    f, "{}", ::es_fluent::localize_in_domain(env!("CARGO_PKG_NAME"),
                    "namespace_holder_variants-field", None)
                )
            }
        }
    }
}
impl ::es_fluent::FluentMessage for NamespaceHolderVariants {
    fn to_fluent_string_with(
        &self,
        localize: &mut dyn for<'__es_fluent_message> FnMut(
            &str,
            &str,
            Option<
                &::std::collections::HashMap<
                    &str,
                    ::es_fluent::FluentValue<'__es_fluent_message>,
                >,
            >,
        ) -> String,
    ) -> String {
        match self {
            Self::Field => {
                localize(env!("CARGO_PKG_NAME"), "namespace_holder_variants-field", None)
            }
        }
    }
}
#[doc(hidden)]
mod __es_fluent_inventory_namespace_holder_variants {
    use super::*;
    static VARIANTS: &[::es_fluent::registry::FtlVariant] = &[
        ::es_fluent::registry::FtlVariant {
            name: "Field",
            ftl_key: "namespace_holder_variants-field",
            args: &[],
            module_path: module_path!(),
            line: line!(),
        },
    ];
    static TYPE_INFO: ::es_fluent::registry::FtlTypeInfo = ::es_fluent::registry::FtlTypeInfo {
        type_kind: ::es_fluent::meta::TypeKind::Enum,
        type_name: "NamespaceHolderVariants",
        variants: VARIANTS,
        file_path: file!(),
        module_path: module_path!(),
        namespace: Some(
            ::es_fluent::registry::NamespaceRule::Literal(
                ::std::borrow::Cow::Borrowed("parent_ns"),
            ),
        ),
    };
    ::es_fluent::__inventory::submit!(
        ::es_fluent::registry::RegisteredFtlType(& TYPE_INFO)
    );
}
impl ::es_fluent::ThisFtl for NamespaceHolderVariants {
    fn this_ftl() -> String {
        ::es_fluent::localize_in_domain(
            env!("CARGO_PKG_NAME"),
            "namespace_holder_variants_this",
            None,
        )
    }
}
#[doc(hidden)]
mod __es_fluent_this_inventory_namespace_holder_variants {
    use super::*;
    static VARIANTS: &[::es_fluent::registry::FtlVariant] = &[
        ::es_fluent::registry::FtlVariant {
            name: "NamespaceHolderVariants",
            ftl_key: "namespace_holder_variants_this",
            args: &[],
            module_path: module_path!(),
            line: line!(),
        },
    ];
    static TYPE_INFO: ::es_fluent::registry::FtlTypeInfo = ::es_fluent::registry::FtlTypeInfo {
        type_kind: ::es_fluent::meta::TypeKind::Enum,
        type_name: "NamespaceHolderVariants",
        variants: VARIANTS,
        file_path: file!(),
        module_path: module_path!(),
        namespace: Some(
            ::es_fluent::registry::NamespaceRule::Literal(
                ::std::borrow::Cow::Borrowed("parent_ns"),
            ),
        ),
    };
    ::es_fluent::__inventory::submit!(
        ::es_fluent::registry::RegisteredFtlType(& TYPE_INFO)
    );
}
impl From<&NamespaceHolderVariants> for ::es_fluent::FluentValue<'_> {
    fn from(value: &NamespaceHolderVariants) -> Self {
        use ::es_fluent::ToFluentString as _;
        value.to_fluent_string().into()
    }
}
impl From<NamespaceHolderVariants> for ::es_fluent::FluentValue<'_> {
    fn from(value: NamespaceHolderVariants) -> Self {
        (&value).into()
    }
}
